JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre12

Thanks to Lionel Fiol, Ollie Rutherfurd and Thomas Alspaugh for
contributing to this release.

{{{ Miscellaneous Changes

- The Buffer Options and Global Options->Editing panes no longer allow
  setting the wrap mode to 'soft' with a wrap margin of zero. Previously
  this was allowed, but did nothing since the feature was removed in
  4.2.

- DELETE key works with the tall caret now.

- Macros in the user macros directory now override macros in the system
  macro directory.

- Added 'Next Dirty Buffer' and 'Insert Selection' macros
  (Ollie Rutherfurd).

- Pressing A+DOWN in a history text field now shows the field's popup
  menu (Joerg Spieler).

}}}
{{{ Syntax Highlighting

- Updated BibTeX and LaTeX syntax highlighting (Thomas Alspaugh).

- PHP mode now recognizes <script language="PHP">...</script>.

- Updated Omnimark syntax highlighting (Lionel Fiol).

- Added RTF syntax highlighting (Lionel Fiol).

}}}
{{{ Bug Fixes

- Fixed a possible deadlock on startup when loading the SQL plugin. In
  fact this would happen with any plugin that attempted to load icons
  from its class initializer.

- Fixed NullPointerException when unloading a plugin which has at least
  one floating window that is not docked.

- Fixed problems immediately after changing the font size due to a
  missing recalculateLastPhysicalLine() call.

- Fixed NullPointerException in PluginJAR on startup if settings
  directory can not be written to.

- File->Save All would ask for confirmation even if "Confirm Save All
  Buffers" was switched off.

- Fixed off-by-one error in Edit->Word Count if the selection ended with
  whitespace.

- Text area's horizontal scroll did not update when the text area was
  resized.

- jEdit.getActiveView() would return null if the current view was
  closed, and another view was not focused. This would break the
  edit server if -reuseview was specified.
